// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotPasswordForm/> should fail requesting 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="makeStyles-root-11"
      >
        <div
          class="MuiBox-root MuiBox-root-12"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3"
          >
            Reset password
          </h3>
        </div>
        <form
          action="#"
          data-testid="common-auth-forgotPassword-form-form"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                data-testid="common-auth-forgotPassword-form-email"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-14 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-error Mui-error MuiFormLabel-filled"
                  data-shrink="true"
                >
                  Enter email
                </label>
                <div
                  class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-13 makeStyles-filledRoot-15 Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="true"
                    class="MuiInputBase-input MuiFilledInput-input"
                    type="text"
                    value="john@doe"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-container"
                style="min-height: 0px; height: 0px; transition-duration: 300ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
                    >
                      Enter valid email
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <button
                class="MuiButtonBase-root MuiButton-root makeStyles-root-16 makeStyles-root-19 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                tabindex="0"
                type="submit"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="makeStyles-inner-17 makeStyles-inner-20"
                    data-testid="common-elementary-button-children"
                    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                  >
                    Request reset password
                  </span>
                  <div
                    class="makeStyles-loader-18"
                    data-testid="common-elementary-button-loader"
                    style="opacity: 0; visibility: hidden;"
                  >
                    <div
                      class="css-0"
                    >
                      <div
                        class="css-1ab95gp"
                      />
                      <div
                        class="css-tm4xur"
                      />
                      <div
                        class="css-1epl0i6"
                      />
                      <div
                        class="css-1fj2adh"
                      />
                      <div
                        class="css-1vivfwt"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="makeStyles-root-11"
    >
      <div
        class="MuiBox-root MuiBox-root-12"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Reset password
        </h3>
      </div>
      <form
        action="#"
        data-testid="common-auth-forgotPassword-form-form"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="common-auth-forgotPassword-form-email"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-14 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled Mui-error Mui-error MuiFormLabel-filled"
                data-shrink="true"
              >
                Enter email
              </label>
              <div
                class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-13 makeStyles-filledRoot-15 Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiFilledInput-input"
                  type="text"
                  value="john@doe"
                />
              </div>
            </div>
            <div
              class="MuiCollapse-container"
              style="min-height: 0px; height: 0px; transition-duration: 300ms;"
            >
              <div
                class="MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner"
                >
                  <p
                    class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
                  >
                    Enter valid email
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <button
              class="MuiButtonBase-root MuiButton-root makeStyles-root-16 makeStyles-root-19 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-inner-17 makeStyles-inner-20"
                  data-testid="common-elementary-button-children"
                  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                >
                  Request reset password
                </span>
                <div
                  class="makeStyles-loader-18"
                  data-testid="common-elementary-button-loader"
                  style="opacity: 0; visibility: hidden;"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-1ab95gp"
                    />
                    <div
                      class="css-tm4xur"
                    />
                    <div
                      class="css-1epl0i6"
                    />
                    <div
                      class="css-1fj2adh"
                    />
                    <div
                      class="css-1vivfwt"
                    />
                  </div>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ForgotPasswordForm/> should successfully request reset 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="makeStyles-root-1"
      >
        <div
          class="MuiBox-root MuiBox-root-2"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3"
          >
            Reset password
          </h3>
        </div>
        <form
          action="#"
          data-testid="common-auth-forgotPassword-form-form"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                data-testid="common-auth-forgotPassword-form-email"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-4 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
                  data-shrink="true"
                >
                  Enter email
                </label>
                <div
                  class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-3 makeStyles-filledRoot-5 MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiFilledInput-input"
                    type="text"
                    value="john@doe.com"
                  />
                </div>
              </div>
              <div
                class="MuiCollapse-container MuiCollapse-hidden"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <p
                      class="MuiFormHelperText-root MuiFormHelperText-contained"
                    >
                      <span>
                        ​
                      </span>
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
            >
              <button
                class="MuiButtonBase-root MuiButton-root makeStyles-root-6 makeStyles-root-9 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                tabindex="0"
                type="submit"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="makeStyles-inner-7 makeStyles-inner-10"
                    data-testid="common-elementary-button-children"
                    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                  >
                    Request reset password
                  </span>
                  <div
                    class="makeStyles-loader-8"
                    data-testid="common-elementary-button-loader"
                    style="opacity: 0; visibility: hidden;"
                  >
                    <div
                      class="css-0"
                    >
                      <div
                        class="css-1ab95gp"
                      />
                      <div
                        class="css-tm4xur"
                      />
                      <div
                        class="css-1epl0i6"
                      />
                      <div
                        class="css-1fj2adh"
                      />
                      <div
                        class="css-1vivfwt"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="makeStyles-root-1"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Reset password
        </h3>
      </div>
      <form
        action="#"
        data-testid="common-auth-forgotPassword-form-form"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="common-auth-forgotPassword-form-email"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-4 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
                data-shrink="true"
              >
                Enter email
              </label>
              <div
                class="MuiInputBase-root MuiFilledInput-root makeStyles-filledRoot-3 makeStyles-filledRoot-5 MuiInputBase-fullWidth MuiInputBase-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input"
                  type="text"
                  value="john@doe.com"
                />
              </div>
            </div>
            <div
              class="MuiCollapse-container MuiCollapse-hidden"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner"
                >
                  <p
                    class="MuiFormHelperText-root MuiFormHelperText-contained"
                  >
                    <span>
                      ​
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
          >
            <button
              class="MuiButtonBase-root MuiButton-root makeStyles-root-6 makeStyles-root-9 MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-inner-7 makeStyles-inner-10"
                  data-testid="common-elementary-button-children"
                  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                >
                  Request reset password
                </span>
                <div
                  class="makeStyles-loader-8"
                  data-testid="common-elementary-button-loader"
                  style="opacity: 0; visibility: hidden;"
                >
                  <div
                    class="css-0"
                  >
                    <div
                      class="css-1ab95gp"
                    />
                    <div
                      class="css-tm4xur"
                    />
                    <div
                      class="css-1epl0i6"
                    />
                    <div
                      class="css-1fj2adh"
                    />
                    <div
                      class="css-1vivfwt"
                    />
                  </div>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
